<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2018, Nordic Semiconductor
  ~ All rights reserved.
  ~
  ~ Redistribution and use in source and binary forms, with or without modification, are permitted provided that the following conditions are met:
  ~
  ~ 1. Redistributions of source code must retain the above copyright notice, this list of conditions and the following disclaimer.
  ~
  ~ 2. Redistributions in binary form must reproduce the above copyright notice, this list of conditions and the following disclaimer in the
  ~ documentation and/or other materials provided with the distribution.
  ~
  ~ 3. Neither the name of the copyright holder nor the names of its contributors may be used to endorse or promote products derived from this
  ~ software without specific prior written permission.
  ~
  ~ THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
  ~ LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
  ~ HOLDER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
  ~ LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
  ~ ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE
  ~ USE OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context=".CSCActivity"
	tools:ignore="ContentDescription">

	<com.google.android.material.appbar.AppBarLayout
		android:id="@+id/appbar_layout"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:theme="@style/AppTheme.AppBarOverlay">

		<com.google.android.material.appbar.MaterialToolbar
			android:id="@+id/toolbar"
			android:layout_width="match_parent"
			android:layout_height="?attr/actionBarSize"
			app:popupTheme="@style/AppTheme.PopupOverlay" />

	</com.google.android.material.appbar.AppBarLayout>

	<ScrollView
		android:id="@+id/device_container"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@+id/appbar_layout"
		android:visibility="gone"
		tools:visibility="visible">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:orientation="vertical">

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/activity_horizontal_margin"
				android:layout_marginBottom="@dimen/activity_horizontal_margin">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<com.google.android.material.appbar.MaterialToolbar
						android:id="@+id/speed_tool_bar"
						android:layout_width="0dp"
						android:layout_height="?actionBarSize"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:logo="@drawable/ic_action_speed"
						app:title="@string/title_speed"
						app:titleMarginStart="@dimen/toolbar_title_margin" />

					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/speed_value"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:paddingStart="@dimen/activity_horizontal_margin"
						android:paddingEnd="@dimen/activity_horizontal_margin"
						android:text="@string/speed_default"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/speed_tool_bar" />

					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/battery_level_sensor1"
						android:layout_width="0dp"
						android:layout_height="match_parent"
						android:paddingStart="@dimen/activity_horizontal_margin"
						android:paddingEnd="@dimen/activity_horizontal_margin"
						android:text="@string/batteryLevel_default"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/speed_tool_bar" />

					<ImageView
						android:id="@+id/batteryFull1"
						android:layout_marginRight="10dp"
						android:layout_width="27dp"
						android:layout_height="27dp"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toStartOf="@+id/battery_level_sensor1"
						app:srcCompat="@drawable/battery_unknown_icon" />


				</androidx.constraintlayout.widget.ConstraintLayout>
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/activity_horizontal_margin">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<com.google.android.material.appbar.MaterialToolbar
						android:id="@+id/cadence_tool_bar"
						android:layout_width="0dp"
						android:layout_height="?actionBarSize"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:logo="@drawable/ic_action_cadence"
						app:title="@string/title_cadence"
						app:titleMarginStart="@dimen/toolbar_title_margin" />

					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/cadence_value"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:paddingStart="@dimen/activity_horizontal_margin"
						android:paddingEnd="@dimen/activity_horizontal_margin"
						android:text="@string/cadence_default"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/cadence_tool_bar" />

					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/battery_level_sensor2"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:paddingStart="@dimen/activity_horizontal_margin"
						android:paddingEnd="@dimen/activity_horizontal_margin"
						android:text="@string/batteryLevel_default"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/cadence_tool_bar" />

					<ImageView
						android:id="@+id/batteryFull2"
						android:layout_marginRight="10dp"
						android:layout_width="27dp"
						android:layout_height="27dp"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toStartOf="@+id/battery_level_sensor2"
						app:srcCompat="@drawable/battery_unknown_icon" />

				</androidx.constraintlayout.widget.ConstraintLayout>
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/activity_horizontal_margin">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<com.google.android.material.appbar.MaterialToolbar
						android:id="@+id/distance_tool_bar"
						android:layout_width="0dp"
						android:layout_height="?actionBarSize"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:logo="@drawable/ic_action_distance"
						app:title="@string/title_distance"
						app:titleMarginStart="@dimen/toolbar_title_margin" />

					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/distance_value"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:paddingStart="@dimen/activity_horizontal_margin"
						android:paddingEnd="@dimen/activity_horizontal_margin"
						android:text="@string/distance_default"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
						android:layout_marginTop="10dp"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/distance_tool_bar" />

					<com.google.android.material.button.MaterialButton
						android:id="@+id/reset_distance_button"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="@dimen/activity_vertical_margin"
						android:paddingStart="@dimen/activity_horizontal_margin"
						android:paddingEnd="@dimen/activity_horizontal_margin"
						android:text="@string/text_resetValue"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/distance_tool_bar" />

				</androidx.constraintlayout.widget.ConstraintLayout>
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/activity_horizontal_margin">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<com.google.android.material.appbar.MaterialToolbar
						android:id="@+id/title_enter_value"
						android:layout_width="0dp"
						android:layout_height="?actionBarSize"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:logo="@drawable/ic_action_diameter"
						app:title="@string/title_value"
						app:titleMarginStart="@dimen/toolbar_title_margin" />

					<com.google.android.material.textfield.TextInputEditText
						android:id="@+id/diameter_value"
						android:layout_width="150dp"
						android:layout_height="wrap_content"
						android:gravity="center"
						android:inputType="text"
						android:paddingStart="@dimen/activity_horizontal_margin"
						android:paddingEnd="@dimen/activity_horizontal_margin"
						android:text="@string/diameter_default"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/title_enter_value" />

					<com.google.android.material.button.MaterialButton
						android:id="@+id/set_button"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="@dimen/activity_vertical_margin"
						android:paddingStart="@dimen/activity_horizontal_margin"
						android:paddingEnd="@dimen/activity_horizontal_margin"
						android:text="@string/text_setValue"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
						app:layout_constraintRight_toLeftOf="@id/reset_button"
						app:layout_constraintTop_toBottomOf="@+id/title_enter_value" />

					<com.google.android.material.button.MaterialButton
						android:id="@+id/reset_button"
						android:layout_width="wrap_content"
						android:layout_height="wrap_content"
						android:layout_marginRight="@dimen/activity_vertical_margin"
						android:paddingStart="@dimen/activity_horizontal_margin"
						android:paddingEnd="@dimen/activity_horizontal_margin"
						android:text="@string/text_resetValue"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/title_enter_value" />
				</androidx.constraintlayout.widget.ConstraintLayout>
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.card.MaterialCardView
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginBottom="@dimen/activity_horizontal_margin">

				<androidx.constraintlayout.widget.ConstraintLayout
					android:layout_width="match_parent"
					android:layout_height="match_parent">

					<com.google.android.material.appbar.MaterialToolbar
						android:id="@+id/HR_tool_bar"
						android:layout_width="0dp"
						android:layout_height="?actionBarSize"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toTopOf="parent"
						app:logo="@drawable/heartrate_icon"
						app:title="@string/title_heartRate"
						app:titleMarginStart="@dimen/toolbar_title_margin" />

					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/heartRate_value"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:paddingStart="@dimen/activity_horizontal_margin"
						android:paddingEnd="@dimen/activity_horizontal_margin"
						android:text="@string/cadence_default"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
						app:layout_constraintLeft_toLeftOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/HR_tool_bar" />

					<com.google.android.material.textview.MaterialTextView
						android:id="@+id/battery_level_sensor3"
						android:layout_width="0dp"
						android:layout_height="wrap_content"
						android:paddingStart="@dimen/activity_horizontal_margin"
						android:paddingEnd="@dimen/activity_horizontal_margin"
						android:text="@string/batteryLevel_default"
						android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
						app:layout_constraintRight_toRightOf="parent"
						app:layout_constraintTop_toBottomOf="@+id/HR_tool_bar" />

					<ImageView
						android:id="@+id/batteryFull3"
						android:layout_marginRight="10dp"
						android:layout_width="27dp"
						android:layout_height="27dp"
						app:layout_constraintBottom_toBottomOf="parent"
						app:layout_constraintEnd_toStartOf="@+id/battery_level_sensor3"
						app:srcCompat="@drawable/battery_unknown_icon" />

				</androidx.constraintlayout.widget.ConstraintLayout>
			</com.google.android.material.card.MaterialCardView>

			<com.google.android.material.button.MaterialButton
				android:id="@+id/reconnect_button"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginRight="@dimen/activity_vertical_margin"
				android:paddingStart="@dimen/activity_horizontal_margin"
				android:paddingEnd="@dimen/activity_horizontal_margin"
				android:text="Reconnect"
				android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
				app:layout_constraintRight_toLeftOf="@id/reset_button"
				app:layout_constraintTop_toBottomOf="@+id/title_enter_value" />

		</LinearLayout>
	</ScrollView>

	<LinearLayout
		android:id="@+id/progress_container"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:gravity="center_horizontal"
		android:orientation="vertical"
		android:padding="@dimen/activity_horizontal_margin"
		android:visibility="gone"
		tools:visibility="gone">

		<com.google.android.material.textview.MaterialTextView
			android:id="@+id/connection_state"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:gravity="center_horizontal"
			android:textSize="16sp"
			tools:text="@string/state_connecting" />

		<ProgressBar
			style="?android:attr/progressBarStyleHorizontal"
			android:layout_width="250dp"
			android:layout_height="wrap_content"
			android:indeterminate="true" />
	</LinearLayout>

	<include
		android:id="@+id/not_supported"
		layout="@layout/info_not_supported"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_centerInParent="true"
		android:visibility="gone"
		tools:visibility="gone" />
</RelativeLayout>